--- a/charts/brp-personen-mock/templates/deployment.yaml
+++ b/charts/brp-personen-mock/templates/deployment.yaml
@@ -8,7 +8,7 @@ spec:
   replicas: 1
   selector:
     matchLabels:
-      {{- include "brppersonenmock.labels" . | nindent 6 }}
+      {{- include "brppersonenmock.selectorLabels" . | nindent 6 }}
   template:
     metadata:
       labels:
