--- a/charts/podiumd/values.yaml
+++ b/charts/podiumd/values.yaml
@@ -1169,46 +1169,47 @@ openklant:
     #   oidc_db_config_enable: True
     #   oidc_db_config_admin_auth:
     #     providers:
-    #     - identifier: admin-oidc-provider  # must be same as oidc_provider_identifier
-    #       oidc_token_use_basic_auth: true
-    #       oidc_use_nonce: false
-    #       oidc_nonce_size: 32
-    #       oidc_state_size: 32
-    #       endpoint_config:
-    #         oidc_op_discovery_endpoint: https://keycloak.example.nl/realms/gemeente-x/   
-    #     items:
-    #     - identifier: admin-oidc 
-    #       enabled: True
-    #       oidc_provider_identifier: admin-oidc-provider      
-    #       oidc_rp_client_id: openklant.example.nl
-    #       oidc_rp_client_secret: ${keycloak_client_secret}
+    #       - identifier: admin-oidc-provider  # must be same as oidc_provider_identifier
+    #         oidc_token_use_basic_auth: true
+    #         oidc_use_nonce: false
+    #         oidc_nonce_size: 32
+    #         oidc_state_size: 32
+    #         endpoint_config:
+    #           oidc_op_discovery_endpoint: https://keycloak.example.nl/realms/gemeente-x/   
+    #   items:
+    #     - identifier: admin-oidc
+    #       enabled: true
+    #       oidc_provider_identifier: admin-oidc-provider
     #       oidc_rp_scopes_list:
-    #       - openid
-    #       - email
-    #       - profile
-    #       - roles
-    #       oidc_rp_sign_algo: RS256
-    #       username_claim:
-    #       - sub
-    #       groups_claim:
-    #       - roles
-    #       claim_mapping:
-    #         first_name:
-    #         - given_name
-    #         last_name:
-    #         - family_name
-    #         email:
+    #         - openid
     #         - email
-    #       sync_groups: true
-    #       sync_groups_glob_pattern: "*"
-    #       default_groups: []
-    #       make_users_staff: true
-    #       superuser_group_names:
-    #       - Superuser
-    #       oidc_use_nonce: true
-    #       oidc_nonce_size: 32
-    #       oidc_state_size: 32
+    #         - profile
+    #         - roles
+    #       oidc_rp_client_id: openklant
+    #       oidc_rp_client_secret: REP_OPENKLANT_OIDC_SECRET_REP
+    #       oidc_rp_sign_algo: RS256
     #       userinfo_claims_source: id_token
+    #       options:
+    #         user_settings:
+    #           claim_mappings:
+    #             username:
+    #               - preferred_username
+    #             email:
+    #               - email
+    #             first_name:
+    #               - given_name
+    #             last_name:
+    #               - family_name
+    #           username_case_sensitive: true
+    #         groups_settings:
+    #           claim_mapping:
+    #             - groups
+    #           superuser_group_names:
+    #             - "administrators"
+    #           make_users_staff: true
+    #           sync: true
+    #           sync_pattern: "*"
+    #           default_groups: []
     #   tokenauth_config_enable: true
     #   tokenauth:
     #     items:
